[project]
name = "data-knowledge-representation"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Anton Kudryavtsev", email = "antonkudryavtsevdoem@gmail.com" }
]
dependencies = [
    "matplotlib>=3.9.2",
    "networkx>=3.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[tool.rye]
managed = true
virtual = true
dev-dependencies = []
