[project]
name = "data-knowledge-representation"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Anton Kudryavtsev", email = "antonkudryavtsevdoem@gmail.com" }
]
dependencies = [
    "matplotlib>=3.9.2",
    "networkx>=3.3",
    "numpy>=2.1.1",
    "jupyter>=1.1.1",
    "ipython>=8.27.0",
    "ipykernel>=6.29.5",
    "seaborn>=0.13.2",
    "scipy>=1.14.1",
    "scikit-learn>=1.5.1",
    "ruff>=0.6.3",
    "polars>=1.6.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[tool.rye]
managed = true
virtual = true
dev-dependencies = []
